Removed a margin text now that the content no longer overlaps

--- a/frontend/src/app/landing-page/landing-page.component.css
+++ b/frontend/src/app/landing-page/landing-page.component.css
@@ -93,7 +93,6 @@
 .safety-message {
   text-align: center;
   color: white;
-  margin-bottom: 40px;
   max-width: 700px;
 }
 
